[gd_scene load_steps=7 format=3 uid="uid://b64eh3a5uh734"]

[ext_resource type="Script" uid="uid://bhkm8m2ua52n6" path="res://scripts/title_screen.gd" id="1_dc4i4"]
[ext_resource type="Texture2D" uid="uid://ef7rfdbh44fk" path="res://art/environment/Fall_BG_1.png" id="2_dc4i4"]
[ext_resource type="Texture2D" uid="uid://cnbydivbdjslm" path="res://art/environment/Fall_BG_2.png" id="3_e54dn"]
[ext_resource type="Texture2D" uid="uid://c0mxv2y1vvvo0" path="res://art/environment/Fall_BG_3.png" id="4_3yumr"]
[ext_resource type="Texture2D" uid="uid://53ghvtgd5j8r" path="res://art/environment/Fall_BG_4_variation_1.png" id="5_cs5ya"]

[sub_resource type="FontVariation" id="FontVariation_mgrm8"]

[node name="Title Screen" type="Node"]
script = ExtResource("1_dc4i4")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 7
z_as_relative = false
position = Vector2(962, -547)
zoom = Vector2(0.715, 0.715)

[node name="Backgrounds" type="Node" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="Backgrounds"]
z_index = 1
repeat_size = Vector2(1920, 0)
autoscroll = Vector2(-15, 0)
repeat_times = 2

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/Parallax2D"]
position = Vector2(962, -547)
texture = ExtResource("2_dc4i4")

[node name="Parallax2D2" type="Parallax2D" parent="Backgrounds"]
z_index = 2
repeat_size = Vector2(1920, 0)
autoscroll = Vector2(-30, 0)
repeat_times = 2

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/Parallax2D2"]
position = Vector2(962, -547)
texture = ExtResource("3_e54dn")

[node name="Parallax2D3" type="Parallax2D" parent="Backgrounds"]
z_index = 3
repeat_size = Vector2(1920, 0)
autoscroll = Vector2(-45, 0)
repeat_times = 2

[node name="Sprite2D2" type="Sprite2D" parent="Backgrounds/Parallax2D3"]
position = Vector2(962, -547)
texture = ExtResource("4_3yumr")

[node name="Parallax2D4" type="Parallax2D" parent="Backgrounds"]
z_index = 4
repeat_size = Vector2(1920, 0)
autoscroll = Vector2(-60, 0)
repeat_times = 2

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/Parallax2D4"]
position = Vector2(962, -547)
texture = ExtResource("5_cs5ya")

[node name="Multiplayer HUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="Multiplayer HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -384.0
offset_right = 400.0
offset_bottom = -384.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer HUD/Panel"]
layout_mode = 0
offset_left = 111.0
offset_top = -330.0
offset_right = 244.0
offset_bottom = -264.0
scale = Vector2(6.291084, 5.9739666)
alignment = 1

[node name="HostGame" type="Button" parent="Multiplayer HUD/Panel/VBoxContainer"]
z_index = 4
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_mgrm8")
theme_override_font_sizes/font_size = 16
text = "Host New Game"

[node name="JoinAsPlayer2" type="Button" parent="Multiplayer HUD/Panel/VBoxContainer"]
z_index = 5
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Join As Player 2"

[node name="JoinUI" type="VBoxContainer" parent="Multiplayer HUD/Panel"]
z_index = 5
layout_mode = 0
offset_left = 111.0
offset_top = -330.0
offset_right = 894.0
offset_bottom = 22.0

[node name="IPLineEdit" type="LineEdit" parent="Multiplayer HUD/Panel/JoinUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "Enter IP Address of Host"
alignment = 1

[node name="JoinButton" type="Button" parent="Multiplayer HUD/Panel/JoinUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Join"

[connection signal="pressed" from="Multiplayer HUD/Panel/JoinUI/JoinButton" to="." method="_on_join_button_pressed"]
